minor edits in Info.plist
Deleted references to the Avestan script (Avst) and to the present-day
country of Iran (IR). The first should be obvious, and now the keyboard
is simply named “Avestan” in the list of available keyboards, instead
of “Avestan (Avestan)”. I thought this would be clearer to the user.
The deletion of the country designation “IR” suggested itself because
the Avestan language and script are frequently used outside of Iran.

--- a/Avestan.bundle/Contents/Info.plist
+++ b/Avestan.bundle/Contents/Info.plist
@@ -13,7 +13,7 @@
 		<key>TISInputSourceID</key>
 		<string>org.sil.ukelele.keyboardlayout.avestan.avestan</string>
 		<key>TISIntendedLanguage</key>
-		<string>ae-Avst-IR</string>
+		<string>ae</string>
 	</dict>
 </dict>
 </plist>
